fixed spacing on new adapted label

--- a/css/deltagreen.css
+++ b/css/deltagreen.css
@@ -395,7 +395,7 @@ div span.bio-grid-label{
 
 .adaptation-grid-5col{
   display: grid;
-  grid-template-columns: 100px 50px 50px 50px 100px;
+  grid-template-columns: 100px 50px 50px 50px 200px;
   margin-top: 10px;
   margin-bottom: 10px;
   align-content: center;
